Update flink